feat: add header section with basic style and dark mode toggle

--- a/Web Development/Vanilla Js Projects/REST Countries API/index.html
+++ b/Web Development/Vanilla Js Projects/REST Countries API/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rest Countries API</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
     <script src="main.js" defer></script>
 </head>
 <body>
     
-    
+    <!-- header -->
+     <header>
+        <div class="header-section flex">
+            <span class="header-text">Where in the world?</span>
+            <div class="light-dark-mode">
+                <span>Dark mode</span>
+            </div>
+
+        </div>
+     </header>
 </body>
 </html>
