feat: add main content with country cards and API integration

--- a/Web Development/Vanilla Js Projects/REST Countries API/index.html
+++ b/Web Development/Vanilla Js Projects/REST Countries API/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rest Countries API</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
     <script src="main.js" defer></script>
 </head>
@@ -15,10 +16,33 @@
         <div class="header-section flex">
             <span class="header-text">Where in the world?</span>
             <div class="light-dark-mode">
-                <span>Dark mode</span>
+                <span><i class="fa-regular fa-moon"></i>&nbsp; Dark mode</span>
             </div>
 
         </div>
      </header>
+
+     <!-- countries card -->
+      <main>
+        <div class="countries-card container flex">
+            <a href="#" class="card">
+                <img src="https://flagcdn.com/it.svg" alt="South georgia">
+
+                <div class="card-content">
+                    <span class="country-name">Italy</span>
+                    <div class="population">
+                        <p><b>Population:&nbsp;&nbsp;</b><span class="value">12,242,434</span></p>
+                    </div>
+                    <div class="region">
+                        <p><b>Region:&nbsp;&nbsp;</b><span class="value">Europe</span></p>
+                    </div>
+                    <div class="capital">
+                        <p><b>Capital:&nbsp;&nbsp;</b><span class="value">Rome</span></p>
+                    </div>
+                </div>
+                
+            </a>
+        </div>
+      </main>
 </body>
 </html>
