fix: standardize flag image height and set fixed height for card container

--- a/Web Development/Vanilla Js Projects/REST Countries API/index.html
+++ b/Web Development/Vanilla Js Projects/REST Countries API/index.html
@@ -24,25 +24,7 @@
 
      <!-- countries card -->
       <main>
-        <div class="countries-card container flex">
-            <a href="#" class="card">
-                <img src="https://flagcdn.com/it.svg" alt="South georgia">
-
-                <div class="card-content">
-                    <span class="country-name">Italy</span>
-                    <div class="population">
-                        <p><b>Population:&nbsp;&nbsp;</b><span class="value">12,242,434</span></p>
-                    </div>
-                    <div class="region">
-                        <p><b>Region:&nbsp;&nbsp;</b><span class="value">Europe</span></p>
-                    </div>
-                    <div class="capital">
-                        <p><b>Capital:&nbsp;&nbsp;</b><span class="value">Rome</span></p>
-                    </div>
-                </div>
-                
-            </a>
-        </div>
+        <div class="countries-card container flex"></div>
       </main>
 </body>
 </html>
