--- a/Web Development/Vanilla Js Projects/REST Countries API/country.html
+++ b/Web Development/Vanilla Js Projects/REST Countries API/country.html
@@ -6,6 +6,8 @@
     <title>Country</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
+    <link rel="stylesheet" href="countryStyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="countryScript.js" defer></script>
 </head>
 <body>
@@ -19,5 +21,52 @@
 
         </div>
      </header>
+
+     <!-- main section -->
+      <main class="container">
+
+          <button class="back-button">
+            <i class="fa-solid fa-arrow-left"></i> &nbsp; Back
+          </button>
+
+          <div class="country-section flex">
+
+              <div class="flag-section">
+                <img src="https://flagcdn.com/be.svg" alt="">
+              </div>
+
+              <div class="country-content">
+                  <div class="country-name">
+                    <h2 class="contry-heading">Belgium</h2>
+                    <div class="country-details flex">
+                        <div class="section-left flex">
+                            <p><b>Native Name:</b> <span class="value">Belgium</span></p>
+                            <p><b>Population:</b> <span class="value">459,13,313</span></p>
+                            <p><b>Region:</b> <span class="value">Europe</span></p>
+                            <p><b>Sub Region:</b> <span class="value">Western Europe</span></p>
+                            <p><b>Capital:</b> <span class="value">Brussels</span></p>
+                        </div>
+                        <div class="section-right flex">
+                            <p><b>Top Level Domain:</b> <span class="value">Europe</span></p>
+                            <p><b>Currencies:</b> <span class="value">Western Europe</span></p>
+                            <p><b>Languages:</b> <span class="value">Dutch, French, German</span></p>
+                        </div>
+                    </div>
+
+                    <div class="border-countries flex">
+                        <p><b>Border Countries:</b></p>
+
+                        <button class="border-country-btn">France</button>
+                        <button class="border-country-btn">France</button>
+                        <button class="border-country-btn">France</button>
+                        <button class="border-country-btn">France</button>
+                        <button class="border-country-btn">France</button>
+                        <button class="border-country-btn">France</button>
+                    </div>
+                  </div>
+              </div>
+          </div>
+      </main>
+
 </body>
 </html>
