feat: add search functionality

--- a/Web Development/Vanilla Js Projects/REST Countries API/index.html
+++ b/Web Development/Vanilla Js Projects/REST Countries API/index.html
@@ -24,6 +24,23 @@
 
      <!-- countries card -->
       <main>
+
+        <div class="search-section container flex">
+            <div class="input-box-container flex">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+
+                <div class="input-box">
+                    <input type="text" placeholder="Search for a country...">
+                </div>
+            </div>
+
+            <div class="filter-box">
+                <p>test-1</p>
+            </div>
+        </div>
+
         <div class="countries-card container flex"></div>
       </main>
 </body>
