feat: add filter by region functionality

--- a/Web Development/Vanilla Js Projects/REST Countries API/index.html
+++ b/Web Development/Vanilla Js Projects/REST Countries API/index.html
@@ -14,7 +14,7 @@
     <!-- header -->
      <header>
         <div class="header-section flex">
-            <span class="header-text">Where in the world?</span>
+            <a href="/index.html"><span class="header-text">Where in the world?</span></a>
             <div class="light-dark-mode">
                 <span><i class="fa-regular fa-moon"></i>&nbsp; Dark mode</span>
             </div>
@@ -36,8 +36,24 @@
                 </div>
             </div>
 
-            <div class="filter-box">
-                <p>test-1</p>
+            <div class="filter-container">
+                <div class="filter-box flex">
+                    <span>
+                        Filter by Region
+                    </span>
+                    <i class="fa-solid fa-chevron-down"></i>
+                    
+                </div>
+
+                <div class="region-countries">
+                    <ul class="flex">
+                        <li>Africa</li>
+                        <li>America</li>
+                        <li>Asia</li>
+                        <li>Europe</li>
+                        <li>Oceania</li>
+                    </ul>
+                </div>
             </div>
         </div>
 
