--- a/Web Development/Vanilla Js Projects/REST Countries API/index.html
+++ b/Web Development/Vanilla Js Projects/REST Countries API/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
     <script src="main.js" defer></script>
 </head>
-<body>
+<body class="dark-mode">
     
     <!-- header -->
      <header>
