--- a/Web Development/Tailwind/the-shoe-company/src/index.html
+++ b/Web Development/Tailwind/the-shoe-company/src/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Shoe Company</title>
+    <link rel="stylesheet" href="output.css">
 </head>
 <body>
-    
+    <h1 class="text-green-400">test</h1>
 </body>
 </html>
