feat: nav bar add

--- a/Web Development/Tailwind/the-shoe-company/src/index.html
+++ b/Web Development/Tailwind/the-shoe-company/src/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Shoe Company</title>
-    <link rel="stylesheet" href="output.css">
-</head>
-<body>
-    <h1 class="text-green-400">test</h1>
-</body>
+    <link rel="stylesheet" href="output.css" />
+  </head>
+  <body class="bg-black
+  text-white">
+    <!-- navbar -->
+    <div class="fixed top-0 w-screen">
+      <nav
+        class="flex flex-row justify-between items-center w-10/12 max-w-[1400px] h-20 mx-auto space-400"
+      >
+        <div>
+          <img class="w-20" src="../resources/Group 2.svg" alt="logo icon" />
+        </div>
+        <div class="space-x-12 font-medium">
+          <a href="#">Home</a>
+          <a href="#">How it Works?</a>
+          <a href="#">About</a>
+          <a href="#">Testimonials</a>
+          <a href="#">Contact Us</a>
+        </div>
+      </nav>
+    </div>
+
+    <!-- hero section -->
+  </body>
 </html>
