--- a/Web Development/Tailwind/the-shoe-company/src/index.html
+++ b/Web Development/Tailwind/the-shoe-company/src/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Shoe Company</title>
-    <link rel="stylesheet" href="output.css" />
+    <link rel="stylesheet" href="ouput.css">
   </head>
   <body class="bg-black
   text-white">
     <!-- navbar -->
-    <div class="fixed top-0 w-screen">
+    <div class="fixed top-0 w-screen
+    backdrop-blur-sm
+    z-10 bg-black/70">
       <nav
-        class="flex flex-row justify-between items-center w-10/12 max-w-[1400px] h-20 mx-auto space-400"
-      >
+        class="flex flex-row justify-between items-center 
+        w-10/12 max-w-[1400px] h-20 mx-auto space-400">
         <div>
           <img class="w-20" src="../resources/Group 2.svg" alt="logo icon" />
         </div>
-        <div class="space-x-12 font-medium">
+        <div class="space-x-12 font-medium text-white">
           <a href="#">Home</a>
           <a href="#">How it Works?</a>
           <a href="#">About</a>
@@ -27,5 +29,27 @@
     </div>
 
     <!-- hero section -->
+    <img class="absolute right-0
+    h-screen w-1/2 object-cover
+    filter brightness-50" src="../resources/background-road-share 1.svg" alt="">
+    <div class="">
+        <div class="w-10/12 mx-auto max-w-[1400px] h-screen
+        flex">
+            <h2 class="uppercase text-[96px] font-semibold
+            w-1/2 leading-tight
+            self-center justify-end">the<br>shoe<br>company</h2>
+            <div class="w-1/2">
+                <img class="w-[550px]
+                right-1/6 bottom-10
+                absolute" src="../resources/the-white-shoe-hero-image 1.svg" alt="shoe-image">
+            </div>
+        </div>
+    </div>
+
+    <!-- hero section 2 -->
+     <div class="w-10/12 mx-auto max-w-[1400px] h-screen">
+        <h2 class="text-center text-5xl font-bold mt-10">Have they finally made the <br> perfect workout shoes?</h2>
+        <img class="w-1/2 mx-auto mt-4" src="../resources/how-it-works-image 1.svg" alt="shoe-image">
+     </div>
   </body>
 </html>
