fix: in hero section

--- a/Web Development/Tailwind/the-shoe-company/src/index.html
+++ b/Web Development/Tailwind/the-shoe-company/src/index.html
@@ -47,9 +47,14 @@
     </div>
 
     <!-- hero section 2 -->
-     <div class="w-10/12 mx-auto max-w-[1400px] h-screen">
+     <div class="w-10/12 mx-auto max-w-[1400px] h-screen
+     relative">
         <h2 class="text-center text-5xl font-bold mt-10">Have they finally made the <br> perfect workout shoes?</h2>
         <img class="w-1/2 mx-auto mt-4" src="../resources/how-it-works-image 1.svg" alt="shoe-image">
+        <div class="absolute top-1/4">
+            <h3 class="uppercase  text-red-400">the heel</h3>
+            <p class="" >The heel is well-built, it has <br>appropriate elevation and is <br>not too rigid</p>
+        </div>
      </div>
   </body>
 </html>
