--- a/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
+++ b/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <div class="w-2/4 mx-auto max-w-72">
+    <div class="p-6 max-w-md mx-auto ">
         <div class="flex items-center">
             <img class="w-16" src="beach-logo.svg" alt="beach-logo">
             <h2 class="font-bold text-2xl mt-4">Work<span class="text-blue-600">cation</span></h2>
