--- a/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
+++ b/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
@@ -13,7 +13,7 @@
             <h2 class="font-bold text-2xl mt-4">Work<span class="text-blue-600">cation</span></h2>
         </div>
         <div>
-            <img class="rounded-xl shadow-md" src="sean-oulashin-KMn4VEeEPR8-unsplash.jpg" alt="">
+            <img class="rounded shadow-md" src="sean-oulashin-KMn4VEeEPR8-unsplash.jpg" alt="">
         </div>
 
         <div>
