--- a/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
+++ b/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tailwind class 1</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="output.css">
 </head>
 <body>
     <div class="p-6 max-w-md mx-auto ">
         <div class="flex items-center">
-            <img class="w-16" src="beach-logo.svg" alt="beach-logo">
+            <img class="w-16" src="../media/beach-logo.svg" alt="beach-logo">
             <h2 class="font-bold text-2xl mt-4">Work<span class="text-blue-600">cation</span></h2>
         </div>
         <div>
-            <img class="rounded shadow-md" src="sean-oulashin-KMn4VEeEPR8-unsplash.jpg" alt="">
+            <img class="rounded shadow-md" src="../media/sean-oulashin-KMn4VEeEPR8-unsplash.jpg" alt="">
         </div>
 
         <div>
