--- a/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
+++ b/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="output.css">
 </head>
 <body class="bg-gray-300">
-    <div class="grid lg:grid-cols-2 bg-gray-100
+    <div class="grid lg:grid-cols-2 bg-white
     2xl:grid-cols-5">
-        <div class="p-6 max-w-md mx-auto
+        <div class="p-6 pb-16 max-w-md mx-auto
         sm:max-w-xl
         lg:px-12 lg:py-28 lg:max-w-full
         xl:mr-0
@@ -38,9 +38,11 @@
                     lg:mt-6
                     xl:text-lg">Workcation helps you find work friendly rentals  in beautiful location so you can enjoy some  nice weather even when you're not on vacation.</p>
                     <button class="mt-4 bg-blue-600 text-white uppercase text-[12px] font-semibold  py-2 px-4 rounded
+                    sm:hover:bg-green-600
                     lg:mt-6
-                    hover:bg-blue-800 hover:-translate-y-0.5 transform transition
-                    focus:outline-none focus:ring focus:ring-offset-2 focus:ring-blue-600 focus:ring-opacity-80">book your escape</button>
+                    hover:bg-blue-500 hover:-translate-y-0.5 transform transition
+                    focus:outline-none focus:ring focus:ring-offset-2 focus:ring-gray-400 focus:ring-opacity-80
+                    active:bg-blue-700">book your escape</button>
                 </div>
             </div>
         </div>
