fix: duplication delete from button class

--- a/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
+++ b/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
@@ -37,7 +37,10 @@
                     sm:text-base
                     lg:mt-6
                     xl:text-lg">Workcation helps you find work friendly rentals  in beautiful location so you can enjoy some  nice weather even when you're not on vacation.</p>
-                    <button class="btn">book your escape</button>
+                    <div class="space-x-2 mt-4 lg:mt-6">
+                        <button class="btn btn-primary tracking-wider">book your escape</button>
+                        <button class="btn btn-secondary tracking-wider">contact us</button>
+                    </div>
                 </div>
             </div>
         </div>
