--- a/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
+++ b/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tailwind class 1</title>
     <link rel="stylesheet" href="output.css">
+    <script src="script.js" type="module" defer></script>
 </head>
 <body class="bg-gray-300">
     <div class="grid lg:grid-cols-2 bg-white
@@ -50,5 +51,20 @@
             <img class="absolute inset-0 h-full w-full object-cover object-center" src="../media/sean-oulashin-KMn4VEeEPR8-unsplash.jpg" alt="beach-image">
         </div>
     </div>
+
+    <!-- feature section -->
+     <div class="p-6 max-w-md mx-auto">
+        <p class="text-md font-semibold">Popular destinations</p>
+        <p class="text-sm ">A selection of great work-friendly cities with lots to see and explore</p>
+        <div class="mt-4 h-24 bg-white rounded-s-md  rounded-e-md overflow-hidden flex gap-x-4">
+            <img class="h-full " src="../img/chicago.jpg" alt="">
+
+            <div class="">
+                <h2 class="font-semibold mt-4 text-[15px]">Toronto</h2>
+                <p class="text-gray-600 text-[12px] font-normal mt-0">$120 / night average</p>
+                <a class="text-[10px] font-medium mt-3 inline-block text-blue-600" href="#">Explore 76 properties</a>
+            </div>
+        </div>
+     </div>
 </body>
 </html>
