dummy destination data add

--- a/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
+++ b/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="output.css">
     <script src="script.js" type="module" defer></script>
 </head>
-<body class="bg-gray-300">
+<body class="bg-neutral-700">
     <div class="grid lg:grid-cols-2 bg-white
     2xl:grid-cols-5">
         <div class="p-6 pb-16 max-w-md mx-auto
@@ -53,13 +53,14 @@
     </div>
 
     <!-- feature section -->
-     <div class="p-6 max-w-md mx-auto">
+     <div class="p-6 max-w-md mx-auto text-white">
         <p class="text-md font-semibold">Popular destinations</p>
         <p class="text-sm ">A selection of great work-friendly cities with lots to see and explore</p>
-        <div class="mt-4 h-24 bg-white rounded-s-md  rounded-e-md overflow-hidden flex gap-x-4">
+        
+        <div class="mt-4 h-24 bg-white rounded-s-md  rounded-e-md overflow-hidden flex gap-x-5">
             <img class="h-full " src="../img/chicago.jpg" alt="">
 
-            <div class="">
+            <div class="text-black">
                 <h2 class="font-semibold mt-4 text-[15px]">Toronto</h2>
                 <p class="text-gray-600 text-[12px] font-normal mt-0">$120 / night average</p>
                 <a class="text-[10px] font-medium mt-3 inline-block text-blue-600" href="#">Explore 76 properties</a>
