--- a/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
+++ b/Web Development/Tailwind/tailwind-learnings/class-1/src/index.html
@@ -53,17 +53,39 @@
     </div>
 
     <!-- feature section -->
-     <div class="p-6 max-w-md mx-auto text-white">
+     <div class="p-6 max-w-md mx-auto text-white
+     sm:max-w-xl
+     lg:max-w-4xl
+     xl:max-w-6xl">
         <p class="text-md font-semibold">Popular destinations</p>
         <p class="text-sm ">A selection of great work-friendly cities with lots to see and explore</p>
         
-        <div class="mt-4 h-24 bg-white rounded-s-md  rounded-e-md overflow-hidden flex gap-x-5">
-            <img class="h-full " src="../img/chicago.jpg" alt="">
-
-            <div class="text-black">
-                <h2 class="font-semibold mt-4 text-[15px]">Toronto</h2>
-                <p class="text-gray-600 text-[12px] font-normal mt-0">$120 / night average</p>
-                <a class="text-[10px] font-medium mt-3 inline-block text-blue-600" href="#">Explore 76 properties</a>
+        <div id="destinations-section" class="w-full grid
+        sm:grid-cols-2 gap-x-4
+        xl:grid-cols-3">
+            <div class="mt-4 h-24 bg-white rounded-s-md  rounded-e-md overflow-hidden flex gap-x-5">
+                <img class="h-full " src="../img/chicago.jpg" alt="">
+                <div class="text-black">
+                    <h2 class="font-semibold mt-4 text-[15px]">Toronto</h2>
+                    <p class="text-gray-600 text-[12px] font-normal mt-0">$120 / night average</p>
+                    <a class="text-[10px] font-medium mt-3 inline-block text-blue-600" href="#">Explore 76 properties</a>
+                </div>
+            </div>
+            <div class="mt-4 h-24 bg-white rounded-s-md  rounded-e-md overflow-hidden flex gap-x-5">
+                <img class="h-full " src="../img/chicago.jpg" alt="">
+                <div class="text-black">
+                    <h2 class="font-semibold mt-4 text-[15px]">Toronto</h2>
+                    <p class="text-gray-600 text-[12px] font-normal mt-0">$120 / night average</p>
+                    <a class="text-[10px] font-medium mt-3 inline-block text-blue-600" href="#">Explore 76 properties</a>
+                </div>
+            </div>
+            <div class="mt-4 h-24 bg-white rounded-s-md  rounded-e-md overflow-hidden flex gap-x-5">
+                <img class="h-full " src="../img/chicago.jpg" alt="">
+                <div class="text-black">
+                    <h2 class="font-semibold mt-4 text-[15px]">Toronto</h2>
+                    <p class="text-gray-600 text-[12px] font-normal mt-0">$120 / night average</p>
+                    <a class="text-[10px] font-medium mt-3 inline-block text-blue-600" href="#">Explore 76 properties</a>
+                </div>
             </div>
         </div>
      </div>
